# fitbit-web-api-rs

./: Cargo.toml  README.md
src/activity/: goals.rs  lifetime_stats.rs  mod.rs  summary.rs  time_series.rs
src/body/: fat.rs  mod.rs  weight.rs
src/body/log/: fat.rs  mod.rs  weight.rs
src/devices/: get.rs
src/heart_rate/: intraday_time_series.rs  time_series.rs
src/sleep/: logs.rs
src/sleep/goals/: get.rs  mod.rs
src/user/profile/: mod.rs  update.rs
