[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["cli"]
description = " A CLI client for Fitbit's Web API."
edition = "2018"
homepage = "https://github.com/mvertescher/fitbit-web-api-rs"
license = "MIT OR Apache-2.0"
name = "fitbit-web-api"
repository = "https://github.com/mvertescher/fitbit-web-api-rs"
version = "0.2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2", optional = true }
log = { version = "0.4.11", optional = true }
oauth2 = { version = "3", optional = true }
opener = { version = "0.4.1", optional = true }
pretty_env_logger = { version = "0.4", optional = true }
reqwest = { version = "0.10.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.20"
strum_macros = "0.20"
url = { version = "2", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }

[dependencies.tokio]
default-features = false
features = ["macros"]
version = "0.2.22"
optional = true

[features]
client = ["clap", "log", "oauth2", "opener", "pretty_env_logger", "reqwest", "tokio"]

[[bin]]
name = "fitbit-web-api"
required-features = ["client"]

